# policedatauk

./: .gitignore  LICENSE.md  README.md  TESTING.md  pyproject.toml
policedatauk/: __init__.py  tester.py
policedatauk/api/: __init__.py  base.py  crimes.py  forces.py  neighbourhoods.py  police.py  postcodes.py
policedatauk/models/: __init__.py  crime.py  force.py  location.py  neighbourhood.py  postcode.py
policedatauk/tests/: __init__.py  conftest.py  test_crimes.py  test_forces.py  test_postcodes.py  test_utils.py
policedatauk/utils/: __init__.py  dataframe.py  dates.py  geo.py  parsing.py  retry.py  validation.py
src/policedatauk/: __init__.py  exceptions.py
src/policedatauk/api/: __init__.py  base.py  client.py  crimes.py  forces.py  neighbourhoods.py  police.py  postcodes.py  transports.py
src/policedatauk/api/resources/: __init__.py  base.py  crimes.py  forces.py  neighbourhoods.py  postcodes.py
src/policedatauk/api/transports/: __init__.py  transports.py
src/policedatauk/models/: __init__.py  crime.py  force.py  location.py  neighbourhood.py  postcodes.py
src/policedatauk/utils/: __init__.py  dataframe.py  dates.py  geo.py  limits.py  retries.py  validation.py
tests/: conftest.py  test_crimes.py  test_forces.py  test_postcodes.py  test_utils.py
ukcrimepy/: __init__.py  api.py  main.py  utils.py
ukcrimepy/api/: __init__.py  base.py  crimes.py  forces.py  main.py  neighbourhoods.py  police.py  postcodes.py
ukcrimepy/models/: __init__.py  crime.py  force.py  location.py  neighbourhood.py  postcode.py
ukcrimepy/utils/: dataframe.py  geo.py  parsing.py  retry.py  validation.py
