[project]
name = "policedatauk"
version = "0.1.0"
description = "Async Python wrapper for the UK Police Data API."
authors = [{ name = "Daniel Whelan", email = "danieljwhelan@protonmail.com" }]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "tenacity>=9.1.2",
    "aiolimiter>=1.2.1",
    "polars>=1.29.0",
    "shapely>=2.1.1",
    "pyproj>=3.7.1",
]

[project.optional-dependencies]
geo = [
    "folium>=0.20.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "respx>=0.22.0",
    "ruff>=0.12.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
